--- a/style.css
+++ b/style.css
@@ -1,3 +1,61 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+body,
+h1,
+h2,
+h3,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 #header {
-  background-color: rgb(88, 88, 88);
+  background-color: rgb(154, 154, 154);
+}
+
+#header .logo {
+  width: 226px;
+  padding: 15px 0;
+  /* display: inline; */
+}
+
+.navbar {
+  float: right;
+  display: inline;
+}
+
+.navbar .menu {
+  display: inline;
+  font-size: 25px;
+}
+
+.navbar .menu a {
+  text-decoration: none;
+  color: #000000;
+  font-family: 'Outfit', serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  padding: 30px 25px;
+  display: inline-block;
+}
+
+.navbar #icon1 {
+  float: right;
+  display: inline;
+  font-size: 50px;
+  padding: 20px 20px;
+}
+
+.navbar #icon1 a {
+  color: #000;
+  display: inline;
+  text-decoration: none;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
 }
