--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
 body,
 h1,
@@ -11,6 +12,7 @@ p {
   padding: 0;
 }
 
+p,
 h1 {
   font-family: 'Outfit', serif;
   font-optical-sizing: auto;
@@ -144,6 +146,7 @@ html {
 .adopt:hover {
   background-color: #9f764a;
   cursor: pointer;
+  box-shadow: 5px 5px 10px 5px #0000002f;
 }
 
 .rehome {
@@ -152,8 +155,9 @@ html {
 }
 
 .rehome:hover {
-  background-color: #9f764a;
+  background-color: #a7875d;
   cursor: pointer;
+  box-shadow: 5px 5px 10px 5px #0000002f;
 }
 
 .button i {
@@ -179,26 +183,104 @@ html {
 }
 
 #cat {
-  width: 100px;
+  width: 110px;
   position: absolute;
   right: 0;
-  top: 72%;
+  top: 70%;
 }
 
 #about {
   background-image: linear-gradient(#f5efeb 35%, #f8e2c8);
-  height: 150vh;
+  height: 170vh;
 }
 
 .mini-headline {
   text-align: center;
   font-size: 50px;
   color: #634e3f;
-  padding-top: 40px;
+  padding-top: 60px;
 }
 
 #line {
-  width: 80%;
-  margin: 70px auto;
+  width: 73%;
+  margin: 70px auto 25px auto;
   display: block;
+}
+
+#workstages {
+  display: grid;
+  grid-template-columns: 28% 28% 28%;
+  grid-template-rows: 200px;
+  margin: auto;
+  color: #634e3f;
+  grid-gap: 8%;
+}
+
+.item h1 {
+  font-weight: 600;
+  font-size: 30px;
+  text-align: center;
+  padding-bottom: 10px;
+  letter-spacing: 3px;
+}
+
+.item p {
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  padding: 5px 57px;
+  color: #8f7553;
+}
+
+.item-3 p {
+  padding: 5px 30px;
+}
+
+#dog2 {
+  width: 200px;
+  left: 0;
+  position: absolute;
+  top: 140%;
+}
+
+#waiting-adoption {
+  margin-top: 100px;
+}
+
+.pets {
+  display: grid;
+  grid-template-columns: 15% 15% 15% 15% 15%;
+  grid-template-rows: auto;
+  margin-top: 40px;
+
+  box-sizing: border-box;
+  width: 800px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+
+  grid-gap: 50px;
+}
+
+.buttonpet {
+  background-color: #d2c8bc;
+  box-sizing: border-box;
+  border-radius: 50px;
+  padding: 8px;
+  width: 120px;
+  font-size: 20px;
+  text-align: center;
+  font-family: 'League Spartan', serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: 2px;
+  color: #86634f;
+}
+
+.buttonpet:hover {
+  color: #ffffff;
+  background-color: #997863;
+  cursor: pointer;
+  box-shadow: 5px 5px 10px 5px #926f496a;
 }
