--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=League+Spartan:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Outfit:wght@100..900&display=swap');
 
 :root {
-  --primary-color: #254d4d;
-  --text-dark: #171717;
-  --text-light: #737373;
-  --extra-light: #f4f6f5;
-  --white: #ffffff;
-  --max-width: 1200px;
-  --header-font: 'League Spartan', serif;
+  --primary-color: #685341;
+  --text-dark: #502b0f;
+  --extra-dark: #2e1402;
+  --text-light: #724a24;
+  --extra-light: #946d43;
+  --white: #ecdbc1;
+  --dirty-white: #b7966b;
+  --max-width: 1400px;
+  --header-font: 'Outfit', serif;
 }
 
 * {
@@ -17,9 +20,10 @@
 }
 
 .section__container {
-  max-width: var(--max-width);
+  /* max-width: var(--max-width); */
+  width: 1920px;
   margin: auto;
-  padding: 5rem 1rem;
+  /* padding: 5rem 1rem; */
 }
 
 .section__header {
@@ -39,17 +43,56 @@
   /* font-size: 1.5rem; */
   /* font-weight: 600; */
   /* font-family: var(--header-font); */
-  width: 100px;
+  width: 600px;
 }
 
 img {
-  display: flex;
+  display: inline-block;
   width: 20%;
 }
 
 a {
   text-decoration: none;
   transition: 0.3s;
+}
+
+#login {
+  border: 1px solid rgb(105, 81, 49);
+  border-radius: 5px;
+  padding: 6px 14px;
+  color: rgb(105, 81, 49);
+}
+
+#login:hover {
+  background-color: var(--white);
+}
+
+#signup {
+  border-radius: 5px;
+  padding: 6px 14px;
+  border: 1px solid rgb(105, 81, 49);
+  background-color: rgb(105, 81, 49);
+  color: #fff;
+}
+
+#signup:hover {
+  background-color: rgba(105, 81, 49, 0.788);
+}
+
+#lang {
+  border: 1px solid rgb(105, 81, 49);
+  border-radius: 5px;
+  padding: 5px 6px;
+  /* padding-left: 4px;
+  padding-top: 5px;
+  padding-right: 4px;
+  padding-bottom: 2px; */
+  font-size: 16px;
+  color: rgb(105, 81, 49);
+}
+
+#lang:hover {
+  background-color: var(--white);
 }
 
 ul {
@@ -80,22 +123,22 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--primary-color);
+  background-color: #97784f;
 }
 
-.nav__logo .logo {
+/* .nav__logo .logo {
   color: var(--white);
-}
+} */
 
 .nav__menu__btn {
   font-size: 1.5rem;
-  color: var(--white);
+  color: #816b5c;
   cursor: pointer;
 }
 
 .nav__links {
   position: absolute;
-  top: 59px;
+  top: 57px;
   left: 0;
   width: 100%;
   padding: 2rem;
@@ -103,8 +146,8 @@ nav {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 2rem;
-  background-color: var(--primary-color);
+  gap: 1.5rem;
+  background-color: var(--white);
   transition: 0.5s;
   z-index: -1;
   transform: translateY(-100%);
@@ -128,11 +171,15 @@ nav {
   overflow: hidden;
 }
 
-.header__image {
+.header__page {
   grid-area: 1/1/2/2;
+  background-color: var(--white);
+  width: 100%;
+  margin: auto;
+  height: 400px;
 }
 
-.header__image img {
+.header__page img {
   max-width: 900px;
   margin-left: auto;
 }
@@ -166,6 +213,9 @@ nav {
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
+    font-size: 16px;
+    font-family: 'Outfit', serif;
+    font-weight: 600;
   }
 
   .nav__header {
@@ -178,16 +228,16 @@ nav {
     display: none;
   }
 
-  .nav__logo .logo {
-    color: var(--primary-color);
-  }
+  /* .nav__logo .logo {
+    /* color: var(--primary-color); */
+  /* }  */
 
   .nav__links {
     position: static;
     padding: 0;
     width: fit-content;
     flex-direction: row;
-    gap: 3rem;
+    gap: rem;
     background-color: transparent;
     transform: none;
   }
