--- a/style.css
+++ b/style.css
@@ -73,12 +73,12 @@ a {
   border-radius: 5px;
   padding: 6px 14px;
   border: 1px solid rgb(105, 81, 49);
-  background-color: rgb(105, 81, 49);
+  background-color: var(--text-light);
   color: #fff;
 }
 
 #signup:hover {
-  background-color: rgba(105, 81, 49, 0.788);
+  background-color: var(--extra-light);
 }
 
 #lang {
@@ -91,6 +91,7 @@ a {
   padding-bottom: 2px; */
   font-size: 18px;
   color: rgb(105, 81, 49);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 #lang:hover {
@@ -134,7 +135,7 @@ nav {
 
 .nav__menu__btn {
   font-size: 1.5rem;
-  color: #502b0f;
+  color: var(--text-dark);
   cursor: pointer;
 }
 
@@ -152,7 +153,7 @@ nav {
   background-color: var(--white);
   transition: 0.5s;
   z-index: -1;
-  transform: translateY(-110%);
+  transform: translateY(-117%);
 }
 
 .nav__links.open {
@@ -162,6 +163,10 @@ nav {
 .nav__links a {
   font-weight: 500;
   color: var(--text-dark);
+}
+
+.nav__links a:hover {
+  color: var(--extra-light);
 }
 
 .nav__search {
@@ -174,6 +179,36 @@ nav {
 }
 
 /* Language preferences */
+
+/* Close modal button */
+.show-modal {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+  padding: 3px;
+}
+
+.close-modal:hover {
+  color: rgba(0, 0, 0, 0.603);
+}
+
 .hidden {
   display: none;
 }
@@ -183,34 +218,42 @@ nav {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
+  width: 50%;
 
   background-color: white;
   padding: 2rem;
-  border-radius: 5px;
+  border-radius: 15px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
   z-index: 10;
   font-family: 'Nunito', serif;
+  font-weight: 600;
 }
 
 .modal h1 {
-  font-size: 25px;
-  text-align: center;
+  font-size: 1.5rem;
+  color: var(--text-dark);
+  /* text-align: center; */
 }
 
 .modal ul li {
   list-style-type: none;
   text-align: center;
-  background-color: #97784f;
-  width: 6rem;
-  padding: 0.4rem;
-  margin: 0.6rem auto;
-  border-radius: 5px;
+  margin: 1rem;
 }
 
-.modal a {
-  cursor: pointer;
-  color: #ffffff;
+.modal ul li a {
+  display: flex;
+  color: var(--text-dark);
+  /* background-color: var(--text-light); */
+  padding: 0.7rem;
+  margin: 0;
+  width: 7rem;
+}
+
+.modal ul li a:hover {
+  background-color: var(--white);
+  color: var(--text-light);
+  border-radius: 0.2rem;
 }
 
 .overlay {
@@ -219,7 +262,9 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(2px);
+  z-index: 5;
 }
 
 .header__page {
@@ -298,37 +343,6 @@ nav {
   }
 
   .nav__links a:hover {
-    color: var(--primary-color);
-  }
-
-  .nav__search {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 1rem;
-  }
-
-  .nav__search input {
-    padding-block: 5px;
-    outline: none;
-    border: none;
-    width: 0;
-    font-size: 1rem;
-    color: var(--text-dark);
-    border-bottom: 1px solid var(--text-light);
-    transition: 0.3s;
-  }
-
-  .nav__search.open input {
-    width: 100%;
-    max-width: 15rem;
-  }
-
-  .nav__search span {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: var(--text-dark);
-    cursor: pointer;
+    color: var(--extra-light);
   }
 }
