--- a/style.css
+++ b/style.css
@@ -237,12 +237,11 @@ nav {
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
-
   background-color: white;
   padding: 2rem;
   border-radius: 15px;
@@ -285,7 +284,7 @@ nav {
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
