--- a/style.css
+++ b/style.css
@@ -342,8 +342,10 @@ nav {
 
 @media (width > 768px) {
   nav {
-    position: static;
+    position: sticky;
     padding: 2rem 1rem;
+    width: 100%;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -351,6 +353,7 @@ nav {
     font-size: 18px;
     font-family: var(--header-font);
     font-weight: 600;
+    background-color: #fff;
   }
 
   .nav__header {
@@ -376,7 +379,7 @@ nav {
     padding: 0;
     width: fit-content;
     flex-direction: row;
-    gap: rem;
+    gap: 2rem;
     background-color: transparent;
     transform: none;
   }
