--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ nav {
 .header__image img {
   max-width: 790px;
   margin-left: auto;
+  padding-bottom: 2rem;
 }
 
 .header__content {
@@ -314,7 +315,7 @@ nav {
 
 .header__content > div {
   max-width: 580px;
-  padding: 4rem 0rem;
+  padding: 3rem 1rem;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
 }
@@ -361,7 +362,7 @@ nav {
   margin-bottom: 0.5rem;
   font-size: 2.5rem;
   font-weight: 600;
-  color: var(--primary-color);
+  color: var(--extra-light);
 }
 
 .about__card h4 {
@@ -397,8 +398,8 @@ nav {
 }
 
 .services__card {
-  width: 240px;
-  height: 254px;
+  width: 255px;
+  height: 264px;
   border-radius: 20px;
   background: #ffeed5;
   position: relative;
@@ -411,9 +412,9 @@ nav {
 .card-details {
   color: var(--primary-color);
   height: 100%;
-  gap: 0.5em;
+  gap: 0.3em;
   display: grid;
-  place-content: center;
+  /* place-content: center; */
 }
 
 .text-body {
@@ -422,7 +423,7 @@ nav {
 
 /*Text*/
 .text-title {
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-weight: bold;
 }
 
@@ -440,7 +441,7 @@ nav {
 
 .card-button {
   transform: translate(-50%, 125%);
-  width: 77%;
+  width: 85%;
   border-radius: 34px;
   position: absolute;
   padding: 10px 24px;
@@ -567,7 +568,7 @@ nav {
   opacity: 0.6;
 }
 
-#follow-us-at {
+#followUsAt {
   padding-top: 1.5rem;
   display: inline-flex;
   font-weight: 600;
@@ -684,6 +685,7 @@ nav {
 
   .services__grid {
     grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
   }
 
   .footer__container {
